--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,31 +7,29 @@ environment:
   sdk: ^3.5.4
 
 dependencies:
+  cached_network_image: ^3.4.1
+  carousel_slider: ^5.0.0
+  dartz: ^0.10.1
+  dio: ^5.7.0
+  equatable: ^2.0.5
+  fluentui_icons: ^1.0.0
   flutter:
     sdk: flutter
-  dio: ^5.7.0
-  get_it: ^8.0.2
   flutter_bloc: ^8.1.6
-  equatable: ^2.0.5
-  persistent_bottom_nav_bar: ^6.2.1
-  cached_network_image: ^3.4.1
-  dartz: ^0.10.1
   font_awesome_flutter: ^10.8.0
-  fluentui_icons: ^1.0.0
+  get_it: ^8.0.2
+  persistent_bottom_nav_bar: ^6.2.1
 
 dev_dependencies:
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
 
-
   assets:
-  - assets/images/
-
-
+    - assets/images/
 
   fonts:
     - family: Poppins
