--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   persistent_bottom_nav_bar: ^6.2.1
 
 dev_dependencies:
+  dart_code_linter: ^1.2.0
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
